--- a/src/sttp.csproj
+++ b/src/sttp.csproj
@@ -34,25 +34,32 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
-      <HintPath>$(SolutionDir)\..\depends\GSF\Antlr3.Runtime.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(SolutionDir)..\depends\GSF\Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="ExpressionEvaluator, Version=2.0.4.0, Culture=neutral, PublicKeyToken=90d9f15d622e2348, processorArchitecture=MSIL">
-      <HintPath>$(SolutionDir)\..\depends\GSF\ExpressionEvaluator.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(SolutionDir)..\depends\GSF\ExpressionEvaluator.dll</HintPath>
     </Reference>
     <Reference Include="GSF.Communication, Version=2.3.135.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$(SolutionDir)\..\depends\GSF\GSF.Communication.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(SolutionDir)..\depends\GSF\GSF.Communication.dll</HintPath>
     </Reference>
     <Reference Include="GSF.Core, Version=2.3.135.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$(SolutionDir)\..\depends\GSF\GSF.Core.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(SolutionDir)..\depends\GSF\GSF.Core.dll</HintPath>
     </Reference>
     <Reference Include="GSF.Security, Version=2.3.135.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$(SolutionDir)\..\depends\GSF\GSF.Security.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(SolutionDir)..\depends\GSF\GSF.Security.dll</HintPath>
     </Reference>
     <Reference Include="GSF.ServiceProcess, Version=2.3.135.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$(SolutionDir)\..\depends\GSF\GSF.ServiceProcess.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(SolutionDir)..\depends\GSF\GSF.ServiceProcess.dll</HintPath>
     </Reference>
     <Reference Include="GSF.TimeSeries, Version=2.3.135.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$(SolutionDir)\..\depends\GSF\GSF.TimeSeries.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(SolutionDir)..\depends\GSF\GSF.TimeSeries.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
