--- a/.gitignore
+++ b/.gitignore
@@ -19,13 +19,11 @@
 [Rr]eleases/
 x64/
 x86/
+build/
 bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
-
-# Build script output
-scripts/*.output
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
