--- a/src/lib/sttp.gsf.csproj
+++ b/src/lib/sttp.gsf.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>sttp</RootNamespace>
-    <AssemblyName>sttp.net</AssemblyName>
+    <AssemblyName>sttp.gsf</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
