--- a/src/lib/sttp.gsf.csproj
+++ b/src/lib/sttp.gsf.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataGapRecoverer.cs" />
     <Compile Include="SubscriberConnection.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="CompactMeasurement.cs" />
