--- a/src/lib/sttp.gsf/sttp.gsf.csproj
+++ b/src/lib/sttp.gsf/sttp.gsf.csproj
@@ -23,6 +23,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <NoWarn>CS8632</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,6 +33,18 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <NoWarn>CS8632</NoWarn>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Development|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>$(SolutionDir)..\build\output\$(Configuration)\lib\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>latest</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <NoWarn>CS8632</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
@@ -73,22 +86,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataGapRecoverer.cs" />
-    <Compile Include="SubscriberConnection.cs" />
-    <Compile Include="Common.cs" />
-    <Compile Include="CompactMeasurement.cs" />
-    <Compile Include="DataPublisher.cs" />
-    <Compile Include="DataSubscriber.cs" />
+    <Compile Include="EventHandlerExtensions.cs" />
+    <Compile Include="GlobalUsings.cs" />
+    <Compile Include="internal\Index.cs" />
+    <Compile Include="internal\IsExternalInit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SignalIndexCache.cs" />
-    <Compile Include="SubscriberRightsLookup.cs" />
-    <Compile Include="SubscriptionInfo.cs" />
-    <Compile Include="tssc\TsscCodeWords.cs" />
-    <Compile Include="tssc\TsscDecoder.cs" />
-    <Compile Include="tssc\TsscEncoder.cs" />
-    <Compile Include="tssc\TsscPointMetadata.cs" />
-    <Compile Include="SubscriberAdapter.cs" />
+    <Compile Include="internal\Range.cs" />
   </ItemGroup>
+  <ItemGroup />
+  <Import Project="..\sttp.core\sttp.core.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <CallTarget Targets="SignBuild" />
