--- a/src/samples/InteropTest-gsf/InteropTest-gsf.csproj
+++ b/src/samples/InteropTest-gsf/InteropTest-gsf.csproj
@@ -33,6 +33,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Development|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Development\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>latest</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="GSF.Communication">
       <HintPath>..\..\..\depends\GSF\GSF.Communication.dll</HintPath>
@@ -60,7 +70,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\lib\sttp.gsf.csproj">
+    <ProjectReference Include="..\..\lib\sttp.gsf\sttp.gsf.csproj">
       <Project>{a5c8fae8-5f30-4f9b-8bc7-4f0f17b0be52}</Project>
       <Name>sttp.gsf</Name>
     </ProjectReference>
