--- a/src/lib/sttp.gsf/sttp.gsf.csproj
+++ b/src/lib/sttp.gsf/sttp.gsf.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>$(SolutionDir)..\build\output\$(Configuration)\lib\</OutputPath>
+    <OutputPath>..\..\..\build\output\$(Configuration)\lib\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -28,7 +28,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>$(SolutionDir)..\build\output\$(Configuration)\lib\</OutputPath>
+    <OutputPath>..\..\..\build\output\$(Configuration)\lib\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -37,43 +37,51 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Development|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>$(SolutionDir)..\build\output\$(Configuration)\lib\</OutputPath>
+    <OutputPath>..\..\..\build\output\$(Configuration)\lib\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
-    <NoWarn>CS8632</NoWarn>
+    <NoWarn>CS8632,CS0436</NoWarn>
+  </PropertyGroup>
+  <PropertyGroup>
+    <!-- Default depdencies path -->
+    <DependenciesPath>$(SolutionDir)..\depends\</DependenciesPath>
+  </PropertyGroup>
+  <!-- Define alternate dependencies path for openHistorian -->
+  <PropertyGroup Condition="$(SolutionName.Contains('openHistorian'))">
+    <DependenciesPath>$(SolutionDir)Dependencies\</DependenciesPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)..\depends\GSF\Antlr3.Runtime.dll</HintPath>
+      <HintPath>$(DependenciesPath)GSF\Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="ExpressionEvaluator, Version=2.0.4.0, Culture=neutral, PublicKeyToken=90d9f15d622e2348, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)..\depends\GSF\ExpressionEvaluator.dll</HintPath>
+      <HintPath>$(DependenciesPath)GSF\ExpressionEvaluator.dll</HintPath>
     </Reference>
     <Reference Include="GSF.Communication, Version=2.3.135.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)..\depends\GSF\GSF.Communication.dll</HintPath>
+      <HintPath>$(DependenciesPath)GSF\GSF.Communication.dll</HintPath>
     </Reference>
     <Reference Include="GSF.Core, Version=2.3.135.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)..\depends\GSF\GSF.Core.dll</HintPath>
+      <HintPath>$(DependenciesPath)GSF\GSF.Core.dll</HintPath>
     </Reference>
     <Reference Include="GSF.Security, Version=2.3.135.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)..\depends\GSF\GSF.Security.dll</HintPath>
+      <HintPath>$(DependenciesPath)GSF\GSF.Security.dll</HintPath>
     </Reference>
     <Reference Include="GSF.ServiceProcess, Version=2.3.135.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)..\depends\GSF\GSF.ServiceProcess.dll</HintPath>
+      <HintPath>$(DependenciesPath)GSF\GSF.ServiceProcess.dll</HintPath>
     </Reference>
     <Reference Include="GSF.TimeSeries, Version=2.3.135.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)..\depends\GSF\GSF.TimeSeries.dll</HintPath>
+      <HintPath>$(DependenciesPath)GSF\GSF.TimeSeries.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -90,6 +98,8 @@
     <Compile Include="GlobalUsings.cs" />
     <Compile Include="internal\Index.cs" />
     <Compile Include="internal\IsExternalInit.cs" />
+    <Compile Include="ComponentModel\LabelAttribute.cs" />
+    <Compile Include="ComponentModel\ParameterAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="internal\Range.cs" />
   </ItemGroup>
