Simplified configuration platforms

--- a/src/lib/sttp.gemstone/sttp.gemstone.csproj
+++ b/src/lib/sttp.gemstone/sttp.gemstone.csproj
@@ -26,6 +26,7 @@
     <Configurations>Debug;Release;Development</Configurations>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
   <PropertyGroup>
