--- a/src/lib/sttp.gemstone/sttp.gemstone.csproj
+++ b/src/lib/sttp.gemstone/sttp.gemstone.csproj
@@ -1,7 +1,5 @@
-﻿<Project>
-
+<Project>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
-
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -28,59 +26,43 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
-
   <PropertyGroup>
     <OutputPath>..\..\..\build\output\$(Configuration)\lib</OutputPath>
     <DocumentationFile>..\..\..\build\output\$(Configuration)\lib\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)'=='Development'">
     <DebugType>Full</DebugType>
     <Optimize>False</Optimize>
     <DefineConstants>$(DefineConstants);DEBUG</DefineConstants>
   </PropertyGroup>
-
   <ItemGroup>
     <None Remove="UI\STTP.js" />
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Include="UI\STTP.js" />
     <EmbeddedResource Include="UI\STTPChunk.js" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\gemstone\common\src\Gemstone\Gemstone.Common.csproj" Condition="'$(Configuration)'=='Development'" />
-    <PackageReference Include="Gemstone.Common" Version="1.0.149" Condition="'$(Configuration)'!='Development'" />
-
+    <PackageReference Include="Gemstone.Common" Version="1.0.152" Condition="'$(Configuration)'!='Development'" />
     <ProjectReference Include="..\..\..\..\..\gemstone\communication\src\Gemstone.Communication\Gemstone.Communication.csproj" Condition="'$(Configuration)'=='Development'" />
-    <PackageReference Include="Gemstone.Communication" Version="1.0.149" Condition="'$(Configuration)'!='Development'" />
-
+    <PackageReference Include="Gemstone.Communication" Version="1.0.152" Condition="'$(Configuration)'!='Development'" />
     <ProjectReference Include="..\..\..\..\..\gemstone\configuration\src\Gemstone.Configuration\Gemstone.Configuration.csproj" Condition="'$(Configuration)'=='Development'" />
-    <PackageReference Include="Gemstone.Configuration" Version="1.0.149" Condition="'$(Configuration)'!='Development'" />
-
+    <PackageReference Include="Gemstone.Configuration" Version="1.0.152" Condition="'$(Configuration)'!='Development'" />
     <ProjectReference Include="..\..\..\..\..\gemstone\data\src\Gemstone.Data\Gemstone.Data.csproj" Condition="'$(Configuration)'=='Development'" />
-    <PackageReference Include="Gemstone.Data" Version="1.0.149" Condition="'$(Configuration)'!='Development'" />
-
+    <PackageReference Include="Gemstone.Data" Version="1.0.152" Condition="'$(Configuration)'!='Development'" />
     <ProjectReference Include="..\..\..\..\..\gemstone\diagnostics\src\Gemstone.Diagnostics\Gemstone.Diagnostics.csproj" Condition="'$(Configuration)'=='Development'" />
-    <PackageReference Include="Gemstone.Diagnostics" Version="1.0.149" Condition="'$(Configuration)'!='Development'" />
-
+    <PackageReference Include="Gemstone.Diagnostics" Version="1.0.152" Condition="'$(Configuration)'!='Development'" />
     <ProjectReference Include="..\..\..\..\..\gemstone\security\src\Gemstone.Security\Gemstone.Security.csproj" Condition="'$(Configuration)'=='Development'" />
-    <PackageReference Include="Gemstone.Security" Version="1.0.149" Condition="'$(Configuration)'!='Development'" />
-
+    <PackageReference Include="Gemstone.Security" Version="1.0.152" Condition="'$(Configuration)'!='Development'" />
     <ProjectReference Include="..\..\..\..\..\gemstone\threading\src\Gemstone.Threading\Gemstone.Threading.csproj" Condition="'$(Configuration)'=='Development'" />
-    <PackageReference Include="Gemstone.Threading" Version="1.0.149" Condition="'$(Configuration)'!='Development'" />
-
+    <PackageReference Include="Gemstone.Threading" Version="1.0.152" Condition="'$(Configuration)'!='Development'" />
     <ProjectReference Include="..\..\..\..\..\gemstone\timeseries\src\Gemstone.Timeseries\Gemstone.Timeseries.csproj" />
-    <PackageReference Include="Gemstone.Timeseries" Version="1.0.149" Condition="'$(Configuration)'!='Development'" />
+    <PackageReference Include="Gemstone.Timeseries" Version="1.0.152" Condition="'$(Configuration)'!='Development'" />
   </ItemGroup>
-
   <Import Project="..\sttp.core\sttp.core.projitems" Label="Shared" />
-
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
-
   <PropertyGroup Condition="'$(SIGNTOOL)' != ''">
     <PostBuildEvent>$(SIGNTOOL) $(TargetPath)</PostBuildEvent>
   </PropertyGroup>
-
 </Project>
