--- a/src/lib/sttp.gsf/sttp.gsf.csproj
+++ b/src/lib/sttp.gsf/sttp.gsf.csproj
@@ -100,6 +100,7 @@
     <Compile Include="internal\IsExternalInit.cs" />
     <Compile Include="ComponentModel\LabelAttribute.cs" />
     <Compile Include="ComponentModel\ParameterAttribute.cs" />
+    <Compile Include="internal\RequiredMemberAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="internal\Range.cs" />
   </ItemGroup>
