Fixed time series package references

--- a/src/lib/sttp.gemstone/sttp.gemstone.csproj
+++ b/src/lib/sttp.gemstone/sttp.gemstone.csproj
@@ -76,7 +76,7 @@
     <PackageReference Include="Gemstone.Security" Version="1.0.161" Condition="'$(Configuration)'!='Development'" />
     <ProjectReference Include="..\..\..\..\..\gemstone\threading\src\Gemstone.Threading\Gemstone.Threading.csproj" Condition="'$(Configuration)'=='Development'" />
     <PackageReference Include="Gemstone.Threading" Version="1.0.161" Condition="'$(Configuration)'!='Development'" />
-    <ProjectReference Include="..\..\..\..\..\gemstone\timeseries\src\Gemstone.Timeseries\Gemstone.Timeseries.csproj" />
+    <ProjectReference Include="..\..\..\..\..\gemstone\timeseries\src\Gemstone.Timeseries\Gemstone.Timeseries.csproj" Condition="'$(Configuration)'=='Development'" />
     <PackageReference Include="Gemstone.Timeseries" Version="1.0.161" Condition="'$(Configuration)'!='Development'" />
   </ItemGroup>
 
